--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
   <meta property="og:image" content="static/image/your_banner_image.png" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
- -->
-<!-- 
   <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG">
 <!--   <meta name="twitter:description" content="TWITTER BANNER DESCRIPTION META TAG">
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
@@ -22,7 +20,6 @@
   <!-- Keywords for your paper to be indexed by-->
   <meta name="keywords" content="KEYWORDS SHOULD BE PLACED HERE">
   <meta name="viewport" content="width=device-width, initial-scale=1">
- --> -->
 
   <title>Visualize your NN with weights and biases to see which channels are important</title>
   <link rel="icon" type="image/x-icon" href="static/images/doge.ico">
@@ -53,6 +50,7 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">Visualize your NN with weights and biases to see which channels are important</h1>
+            Input dimsensions: 9; Layer dimensions: [9, 9, 2]
             <img src = "nnplot.svg" alt="Neural Networks"/>
             </div>
           </div>
