--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">Visualize your NN with weights and biases to see which channels are important</h1>
+
+            Inspired by neural network playground by TensorFlow.
+            
             Input dimsensions: 9; Layer dimensions: [9, 9, 2]
+            
             <img src = "nnplot.svg" alt="Neural Networks"/>
             </div>
           </div>
