--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">Visualize your NN with weights and biases to see which channels are important</h1>
 
+[![](https://img.shields.io/badge/github-_project_-blue?style=social&logo=github)](https://github.com/Chrisa142857/Lightsheet_microscopy_image_3D_nuclei_instance_segmentation) &ensp;
+
             Inspired by neural network playground by TensorFlow.
             
             Input dimsensions: 9; Layer dimensions: [9, 9, 2]
