--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
         <div class="columns is-centered">
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">Visualize your NN with weights and biases to see which channels are important</h1>
-
-[![](https://img.shields.io/badge/github-_project_-blue?style=social&logo=github)](https://github.com/Chrisa142857/plot-neural-networks) &ensp;
+            <p>
+              <a href="https://github.com/Chrisa142857/plot-neural-networks">
+                <img src="https://img.shields.io/badge/github-_project_-blue?style=social&logo=github" alt>
+              </a>
+            </p>
 
             Inspired by neural network playground by TensorFlow.
             
