--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
               </a>
             </p>
 
-            Inspired by neural network playground by TensorFlow.
+            <p>Inspired by neural network playground by TensorFlow.</p>
             
-            Input dimsensions: 9; Layer dimensions: [9, 9, 2]
+            <p>Input dimsensions: 9; Layer dimensions: [9, 9, 2].</p>
             
             <img src = "nnplot.svg" alt="Neural Networks"/>
             </div>
