--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Visualize your NN with weights and biases to see which channels are important</title>
-  <link rel="icon" type="image/x-icon" href="static/images/doge.ico">
+  <link rel="icon" type="svg+xml" href="static/images/doge.svg">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
