--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h1 class="title is-1 publication-title">Visualize your NN with weights and biases to see which channels are important</h1>
             <p>
               <a href="https://github.com/Chrisa142857/plot-neural-networks">
-                <img src="https://img.shields.io/badge/github-_project_-blue?style=social&logo=github" alt>
+                Check simple Python codes to visualize your own NN in <img src="https://img.shields.io/badge/github-_project_-blue?style=social&logo=github" alt>
               </a>
             </p>
 
