--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">Visualize your NN with weights and biases to see which channels are important</h1>
             <p>
+              Check few lines of Python to visualize your own NN in 
               <a href="https://github.com/Chrisa142857/plot-neural-networks">
-                Check simple Python codes to visualize your own NN in <img src="https://img.shields.io/badge/github-_project_-blue?style=social&logo=github" alt>
+                <img src="https://img.shields.io/badge/github-_project_-blue?style=social&logo=github" alt>
               </a>
             </p>
 
